--- a/index.html
+++ b/index.html
@@ -190,5 +190,30 @@
             </div>
         </div>
     </section>
+    <section class="gallery">
+        <div class="container">
+            <div class="gallery__wrapper">
+                <div class="gallery__content">
+                    <div class="gallery__content-title">
+                        <h3>Our Gallery </h3>
+                    </div>
+                    <div class="gallery__content-description">
+                        <p>The coffee shop name generator is a great tool for those that are <br> deliberating what to call their new coffee.</p>
+                    </div>
+                </div>
+                <div class="gallery__images">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+                <div class="gallery__button">
+                    <button>LOAD MORE</button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
