--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                     <img src="./assets/icons/header-logo.svg" alt="">
                 </div>
                 <div class="header__nav">
+                    <div class="header__nav-list-menu">
+                    <li><img src="./assets/icons/menu.svg" alt=""></li>
+                    </div>
                     <ul class="header__nav-list">
                         <li class="header__nav-item">
                             <a href="" class="header__nav-link">Home</a>
@@ -50,7 +53,7 @@
             <div class="hero__wrapper">
                 <div class="hero__content">
                     <div class="hero__content-title">
-                        <h2>Keep your dreams aroused with a cup of coffee.</h2>
+                        <h2>Keep your dreams <br> aroused with a cup <br> of coffee.</h2>
                     </div>
                     <div class="hero__content-description">
                         <p>The coffee ideas shared by these generators are not cool at all, as they are not a human being.</p>
@@ -202,12 +205,12 @@
                     </div>
                 </div>
                 <div class="gallery__images">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
+                    <img class="gallery__images-image1" src="./assets/images/gallery1.png" alt="">
+                    <img class="gallery__images-image2" src="./assets/images/gallery2.png" alt="">
+                    <img class="gallery__images-image3" src="./assets/images/gallery3.png" alt="">
+                    <img class="gallery__images-image4" src="./assets/images/gallery4.png" alt="">
+                    <img class="gallery__images-image5" src="./assets/images/gallery5.png" alt="">
+                    <img class="gallery__images-image6" src="./assets/images/gallery6.png" alt="">
                 </div>
                 <div class="gallery__button">
                     <button>LOAD MORE</button>
@@ -215,5 +218,191 @@
             </div>
         </div>
     </section>
+    <section class="contact">
+        <div class="container">
+            <div class="contact__wrapper">
+                <div class="contact__content">
+                    <div class="contact__content-subtitle">
+                        <h5>Follow US</h5>
+                        <img src="./assets/icons/line8.svg" alt="">
+                    </div>
+                    <div class="contact__content-title">
+                        <h4>Have an inquiry? <br> 
+                        Text or call and ask Something.</h4>
+                    </div>
+                </div>
+                <div class="contact__socials">
+                    <div class="contact__socials-number">
+                        <img src="./assets/icons/telephone.svg" alt="">
+                        <a href="tel:+88017425227137">
+                <span>+8801742-527137</span></a>
+                </div>
+                <div class="contact__socials-email">
+                <img src="./assets/icons/gmail-loogo.svg" alt="">
+                <button>mdmaksedur17@gmail.com</button>
+                </div>
+                <div class="contact__socials-icons">
+                    <img src="./assets/icons/twitter.svg" alt="">
+                    <img src="./assets/icons/facebook.svg" alt="">
+                    <img src="./assets/icons/instagram.svg" alt="">
+                    <img src="./assets/icons/linkedin.svg" alt="">
+                </div>
+                <div class="contact__socials-coffee">
+                    <div class="contact__socials-coffee-left">
+                    <img  src="./assets/icons/contact-coffee-left.svg" alt="">
+                    </div>
+                    <div class="contact__socials-coffee-right">
+                    <img src="./assets/icons/contact-coffee-right.svg" alt="">
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about">
+        <div class="container">
+            <div class="about__wrapper">
+                <div class="about__content">
+                    <div class="about__content-title">
+                        <h4>Update News</h4>
+                    </div>
+                    <div class="about__content-description">
+                        <p>A cup of brewed coffee represents a contribution of up to 1.8 grams of <br> fiber of the recommended.</p>
+                    </div>
+                </div>
+                <div class="about__cards">
+                    <div class="about__cards-card1">
+                        <div class="about__cards-card1-image">
+                        <img src="./assets/images/about-image1.png" alt="">
+                        </div>
+                        <div class="about__cards-card1-content">
+                            <div class="about__cards-card1-content-title">
+                                <h5>Coffee beans</h5>
+                            </div>
+                            <div class="about__cards-card1-content-description">
+                                <p>These advertising mottos are targeted <br> to the 56% of coffee drinking <br> consumers.</p>
+                            </div>
+                        </div>
+                        <div class="about__cards-card1-buttons">
+                            <div class="about__cards-card1-buttons-button">
+                                <button>Learn More</button>
+                            </div>
+                                <div class="about__cards-card1-buttons-arrow"> 
+                                    <div class="about__cards-card1-buttons-arrow-arrow1">
+                                    <img src="./assets/icons/vector1.svg" alt="">
+                                    </div>
+                                    <div class="about__cards-card1-buttons-arrow-arrow2">
+                                    <img src="./assets/icons/vector2.svg" alt="">
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="about__cards-card2">
+                        <div class="about__cards-card2-image">
+                        <img src="./assets/images/about-image2.png" alt="">
+                        </div>
+                        <div class="about__cards-card2-content">
+                            <div class="about__cards-card1-content-title">
+                                <h5>Coffe beans</h5>
+                            </div>
+                            <div class="about__cards-card2-content-description">
+                                <p>These advertising mottos are targeted <br> to the 56% of coffee drinking <br> consumers.</p>
+                            </div>
+                        </div>
+                        <div class="about__cards-card2-buttons">
+                            <div class="about__cards-card2-buttons-button">
+                                <button>Learn More</button>
+                            </div>
+                                <div class="about__cards-card2-buttons-arrow"> 
+                                    <div class="about__cards-card2-buttons-arrow-arrow1">
+                                    <img src="./assets/icons/vector1.svg" alt="">
+                                    </div>
+                                    <div class="about__cards-card2-buttons-arrow-arrow2">
+                                    <img src="./assets/icons/vector2.svg" alt="">
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="about__cards-card3">
+                        <div class="about__cards-card3-image">
+                            <img src="./assets/images/about-image3.png" alt="">
+                        </div>
+                        <div class="about__cards-card3-content">
+                            <div class="about__cards-card1-content-title">
+                                <h5>Coffe beans</h5>
+                            </div>
+                            <div class="about__cards-card3-content-description">
+                                <p>These advertising mottos are targeted <br> to the 56% of coffee drinking <br> consumers.</p>
+                            </div>
+                        </div>
+                        <div class="about__cards-card3-buttons">
+                            <div class="about__cards-card3-buttons-button">
+                                <button>Learn More</button>
+                            </div>
+                                <div class="about__cards-card3-buttons-arrow"> 
+                                    <div class="about__cards-card3-buttons-arrow-arrow1">
+                                    <img src="./assets/icons/vector1.svg" alt="">
+                                    </div>
+                                    <div class="about__cards-card3-buttons-arrow-arrow2">
+                                    <img src="./assets/icons/vector2.svg" alt="">
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrapper">
+                <div class="footer__content">
+                    <div class="footer__content-column1">
+                        <div class="footer__content-column1-logo">
+                            <img src="./assets/icons/header-logo.svg" alt="">
+                        </div>
+                        <div class="footer__content-column1-description">
+                            <p>Creating a catchy tagline <br> coffee shop business growth.</p>
+                        </div>
+                        <div class="footer__content-column1-number">
+                            <img src="./assets/icons/telephone.svg" alt="">
+                            <a href="tel:+88017425227137">
+                            <span>+8801742-527137</span></a>
+                        </div>
+                        </div>
+                        <div class="footer__content-column2">
+                                <h5>CATEGORIES</h5>
+                                <span><p>Ashley Szekeres Art</p></span>
+                                <span><p>Merchandise</p></span>
+                                <span><p>Gift Certificates</p></span>
+                            </div>
+                        <div class="footer__content-column2">
+                                <h5>INFORMATION</h5>
+                                <span><p>Coffee Beans</p></span>
+                                <span><p>Contact Us</p></span>
+                                <span><p>Blog</p></span>
+                        </div>
+                        </div>
+                    
+                <div class="footer__socials">
+                    <div class="footer__socials-title">
+                        <h5>FOLLOW US</h5>
+                    </div>
+                    <div class="footer__socials-icons">
+                    <img src="./assets/icons/twitter.svg" alt="">
+                    <img src="./assets/icons/facebook.svg" alt="">
+                    <img src="./assets/icons/instagram.svg" alt="">
+                    <img src="./assets/icons/linkedin.svg" alt="">
+                    </div>
+                </div>
+                </div>
+                <div class="footer__banner">
+                <img src="./assets/icons/pattern.svg" alt="">
+                </div>
+                <div class="footer__bottom">
+                    <p>Copyright © 2021 Coffee, All rights reserved. Present by MoxCreative.</p>
+                </div>
+         </div>
+    </footer>
 </body>
 </html>
